changed some layout issues in the headings and text
added styling to both buttons with an animation on hover

--- a/public_html/VolunteerForm.html
+++ b/public_html/VolunteerForm.html
@@ -16,20 +16,21 @@
                     <!--Insert form name -->
                     <div id="formVolunteerForm" class ="well ">
                          <div class="row" style="margin-top: 15px;">
-                              <div class="col-md-8" style="margin-left: 2.0em;">  
+                              <div class="pull-left" style="margin-left: 2.0em;">  
                                    <h1 style="color: #CC0000;">LifeStriders</h1>
                               </div>
-                              <div class="col-md-1"> </div>
-                              <div class="col-md-2 text-right">
-                                   Phone: 262.309.9297 <wbr>
-                                   Fax: 866.404.3105  <wbr>
-                                   counseling@lifestriders.org  <wbr>
+                              <!--div class="col-md-1"> </div-->
+                              <div class=" pull-right" style="margin-right: 2.0em;">
+                                  <div class="row text-right">
+                                      <p>Phone: 262.309.9297</p>
+                                  <p>Fax: 866.404.3105</p>
+                                  <p>counseling@lifestriders.org</p>
 
                                    <br>
 
-                                   Sll W29667 Summit Avenue (US HWY 18) <wbr>
-                                   Waukesha, WI 53188  <wbr>
-
+                                   <p>S11 W29667 Summit Avenue (US HWY 18)</p> 
+                                   <p>Waukesha, WI 53188</p>
+                                  </div>  
                               </div>
                          </div>
                          <br>
@@ -38,7 +39,7 @@
                               <div class="row">
                                    <div class="col-md-12">
                                         <!--Start of pages 5-8 SM -->
-                                        <h2>DISMISSAL OF VOLUNTEERS AND GUESTS FROM CENTER ACTIVITIES</h2>
+                                        <h2 class="text-center">DISMISSAL OF VOLUNTEERS AND GUESTS FROM CENTER ACTIVITIES</h2>
                                         <p>
                                              LifeStriders relies greatly on volunteers as important members of the team who provide services to and assist our
                                              clients. We also recognize the extreme importance of the safety and well-being of our clients, volunteers, staff,
@@ -78,7 +79,7 @@
                                                   </ol>
                                              </li>
                                         </ul>
-                                        <h2>DISMISSAL OF VOLUNTEERS AND GUESTS FROM CENTER ACTIVITIES</h2>
+                                        <h2 class="text-center">DISMISSAL OF VOLUNTEERS AND GUESTS FROM CENTER ACTIVITIES</h2>
                                         <p>
                                              I have read and understand the policies and program rules by which LifeStriders operates. By signing below, I
                                              indicate my willingness to abide by these rules and policies. I further understand that failure to comply with these
@@ -108,7 +109,7 @@
                                    <div class="row">
                                         <div class="col-md-12">
                                              <!-- Start page 5 -->
-                                             <h2>VOLUNTEER REGISTRATION</h2>
+                                             <h2 class="text-center">VOLUNTEER REGISTRATION</h2>
                                              <p>
                                                   Thank you for inquiring about volunteer opportunities at LifeStriders. Please review the following
                                                   positions available. Applicants may sign up for more than one position per session.
@@ -176,7 +177,7 @@
 
 
 
-                                   <input type="button" id="printPreviewButton" class="btn btn-danger" value="Sumit for Print Preview">
+                                   <input type="button" id="printPreviewButton" class="btn" value="Sumit for Print Preview">
                               </div>
                          </form>
                     </div>
@@ -186,19 +187,22 @@
                          <div class="row">
                               <div id="printPreviewVolunteerForm" class="col-md-12 container">
                                    <div class=" row" style="margin-top: 15px;">
-                                        <div class="col-md-8" style="margin-left: 2.0em;" >  
-                                             <h1 style="color: #CC0000;">LifeStriders</h1>
-                                        </div>
-                                        <div class="col-md-1"> </div>
-                                        <div class="col-md-2 text-right">
-                                             <!-- make a list with no bullet points -->
-                                             Phone: 262.309.9297 <wbr>
-                                             Fax: 866.404.3105 <wbr>
-                                             counseling@lifestriders.org <wbr>
-                                             <br>
-                                             Sll W29667 Summit Avenue (US HWY 18) <wbr>
-                                             Waukesha, WI 53188 <wbr>
-                                        </div>
+                                        <div class="pull-left" style="margin-left: 2.0em;">  
+                                   <h1 style="color: #CC0000;">LifeStriders</h1>
+                              </div>
+                              <!--div class="col-md-1"> </div-->
+                              <div class=" pull-right" style="margin-right: 2.0em;">
+                                  <div class="row text-right">
+                                      <p>Phone: 262.309.9297</p>
+                                  <p>Fax: 866.404.3105</p>
+                                  <p>counseling@lifestriders.org</p>
+
+                                   <br>
+
+                                   <p>S11 W29667 Summit Avenue (US HWY 18)</p> 
+                                   <p>Waukesha, WI 53188</p>
+                                  </div>  
+                              </div>
                                    </div>
                                    <h3 class="text-center">Physician's Form</h3>
                                    <!--These are the imports for the Volunteer Form javascript file - make sure not to reuse naming convensions-->
@@ -207,7 +211,7 @@
                                         <!-- Data Found in JavaScript file -->
                                    </ul>
                                    <hr>
-                                   <div class='text-center'>
+                                   <div class='text-left' style="margin-left: 2.0em;">
                                         <p>
                                              Please keep this checklist, and bring it with you to your orientation.
                                              As you are instructed in certain fields, please ask your instructor/volunteer to initial
@@ -331,7 +335,7 @@
                                    <hr>
                               </div>
                          </div>
-                         <input class="btn btn-danger" type="submit" id="printButton" value="Print">
+                         <input class="btn" type="submit" id="printButton" value="Print">
                     </div>
                </div>
           </div>
